# SecurityAgencyCapstone

./: .gitignore  README.md  Security_database.sql  db.json  guard.json  pyproject.toml  raytest.txt  requirements.txt  security_database.sql
main/: settings.py  urls.py
main/auth/mysql_config/: conf.cnf
security/: admin.py  forms.py  models.py  urls.py  views.py
security/migrations/: 0001_initial.py  0002_alter_nbi_owner.py  0003_delete_duration.py  0004_remove_contract_nbi.py  0005_delete_nbi.py  0006_nbi.py  0007_rename_nbi_clearance_id_nbi_clearance_id.py  0008_rename_clearance_id_nbi_nbi_clearance_id.py  0009_alter_nbi_nbi_clearance_id.py  0010_alter_contract_options_contract_issued_date_and_more.py  0011_alter_contract_issued_date.py  0012_delete_license_guard_lesp_issued_date_delete_nbi.py  0013_guard_nbi_issued_date_alter_guard_nbi_clearance_id.py  0014_customuser_organization_address_and_more.py  0015_contract_daily_wage_alter_contract_months_and_more.py  0016_jobrequest.py  0017_jobrequest_is_approved_jobrequest_months_and_more.py  0018_jobrequest_link.py  0019_alter_jobrequest_daily_wage.py  0020_delete_jobrequest.py  0021_customuser_sex.py  0022_customuser_position.py  0023_alter_customuser_position.py  0024_jobrequest.py  0025_delete_jobrequest.py  0026_remove_contract_is_approved_contract_status.py  0027_remove_customuser_sss_alter_contract_status.py  0028_delete_agencyinformation.py
static/css/: main.css  protectionicon.webm
static/img/: contract.webm
static/js/: app.js  main.js
templates/: base.html  dashboard-nav.html  footer.html  navbar.html
(+47 files in other folders)
